--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "langchain": "^0.1.36",
     "@langchain/openai": "^0.0.28",
+    "@langchain/mongodb": "^0.0.3",
     "mongodb": "^6.5.0",
     "openai": "^5.20.2",
     "zod": "^3.23.8"
